force-app/main/default/objects/Task_Log__c/fields/Day_Log__c.field-meta.xml
<CustomField>
    <fullName>Day_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day Log</label>
    <referenceTo>Day_Log__c</referenceTo>
    <relationshipLabel>Task Logs</relationshipLabel>
    <relationshipName>Task_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>