force-app/main/default/objects/Task_Log__c/fields/Habit__c.field-meta.xml
<CustomField>
    <fullName>Habit__c</fullName>
    <label>Habit</label>
    <type>Lookup</type>
    <referenceTo>Habit__c</referenceTo>
    <relationshipLabel>Task Logs</relationshipLabel>
    <relationshipName>Task_Logs</relationshipName>
</CustomField>