force-app/main/default/objects/Task_Log__c/fields/Intensity__c.field-meta.xml
<CustomField>
    <fullName>Intensity__c</fullName>
    <label>Intensity (%)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>