force-app/main/default/objects/Task_Log__c/fields/Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Score_Value__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Score Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>