force-app/main/default/objects/Task_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>