force-app/main/default/objects/Task_Log__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>Lookup</type>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Task Logs</relationshipLabel>
    <relationshipName>Task_Logs</relationshipName>
</CustomField>